# spave-saver

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-gh-pages.yml  release.yml
app/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.ts
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs
app/src/lib/: types.ts
app/src/lib/api/: contract.test.ts  index.test.ts  index.ts
app/src/lib/components/: FileFilters.svelte  FileList.svelte  InvalidPathList.svelte  PathInput.svelte  PathList.svelte  PathListEditor.svelte  PathSelector.svelte  Sidebar.svelte  Sidebar.test.ts  StatCard.svelte
app/src/lib/stores/: app.test.ts  app.ts
app/src/lib/utils/: duplicates.test.ts  duplicates.ts  format.test.ts  format.ts  path.test.ts  path.ts  similar.test.ts  similar.ts  storage.test.ts  storage.ts
app/src/mock/: broken.ts  config.ts  duplicates.ts  empty.ts  plugins.ts  scan.ts  similar.ts  skipCache.ts  stats.ts  tools.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/broken/: +page.svelte
app/src/routes/compress/: +page.svelte  ConfirmStep.svelte  FileListItem.svelte  PluginSelector.svelte  ProcessStep.svelte  ScanStep.svelte  StepIndicator.svelte
app/src/routes/duplicates/: +page.svelte
app/src/routes/empty/: +page.svelte
app/src/routes/settings/: +page.svelte
app/src/routes/similar/: +page.svelte  Thumbnail.svelte
app/src/routes/stats/: +page.svelte
app/src/test/: setup.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: broken.rs  compress.rs  compress_plugins.rs  filters.rs  hash.rs  hash_cache.rs  image_sim.rs  lib.rs  scanner.rs  skip_cache.rs  thumbnail.rs  video_sim.rs
crates/core/src/plugins/: animated_webp_converter.rs  image_zip_to_webp.rs  mod.rs  webp_converter.rs
crates/db/: Cargo.toml
crates/db/src/: cache.rs  lib.rs  models.rs  sqlite.rs
crates/service/: Cargo.toml
crates/service/src/: api.rs  file_ops.rs  lib.rs  progress.rs  scheduler.rs  task.rs  tools.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  error.rs  lib.rs  logger.rs  time.rs
