[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/service",
    "crates/db",
    "crates/utils",
    "crates/cli",
    "app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chua"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File system & IO
walkdir = "2.4"
notify = "6.1"

# Hashing & crypto
blake3 = "1.5"
sha2 = "0.10"

# Image processing
image = "0.24"
webp = "0.3"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# Lazy initialization
once_cell = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Compression
zip = "0.6"
flate2 = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Time
chrono = "0.4"

# CLI (optional)
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# Tauri
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.1"
