[package]
name = "space-saver-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
crossbeam = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
