[package]
name = "space-saver-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Local crates
space-saver-utils = { path = "../utils" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
sled = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
