[package]
name = "space-saver-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Additional utilities
toml = "0.8"
directories = "5.0"

[dev-dependencies]
tempfile = "3.8"
